# theoria

./: .gitignore  README.md  pyproject.toml  theoria.toml.example
.github/workflows/: test.yml
tests/: conftest.py  test_alignment.py  test_cli.py  test_config.py  test_exporters.py  test_pipeline_hash.py  test_translation.py
theoria/: __init__.py  __main__.py  alignment.py  audio.py  cli.py  config.py  exporters.py  hashing.py  pipeline.py  translation.py  types.py
